test/types/void/void-formal-2.good
void-formal-2.chpl:3: error: Formal 'x' cannot be declared 'void'. Consider using 'nothing' instead.
