test/types/void/void-formal-2.chpl
type t = void;

proc f(x : t) {
}

f(1);
